@@ -1,3 +1,12 @@
+2008-05-11  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* engines/clearlooks/src/clearlooks_draw.c
+	(clearlooks_draw_scale_trough),
+	(clearlooks_draw_progressbar_trough),
+	(clearlooks_draw_progressbar_fill):
+	First implementation of the old scrollbar, 
+	it is breaking Inverted and maybe Glossy (maybe Gummy? :) )
+
 2008-05-11  Benjamin Berg  <benjamin@sipsolutions.net>
 
 	* engines/clearlooks/src/clearlooks_draw_glossy.c:
